--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ button:hover {
 }
 .app-sidebar-note.active,
 .app-sidebar-note.active small {
-	background: #08c;
+	background: rgb(0, 162, 255);
 	color: white;
 }
 
@@ -109,11 +109,7 @@ button:hover {
 	font-size: 2rem;
 	color: #999;
 }
-.input:focus {
-    outline: none !important;
-    border-color:1px solid rgb(0, 162, 255);
-    box-shadow: 0 0 10px #719ECE;
-}
+
 
 /* Editing */
 .app-main-note-edit {
@@ -135,6 +131,12 @@ textarea {
 .app-main-note-edit input {
 	height: 50px;
 	font-size: 2rem;
+}
+
+.app-main-note-edit input:focus, textarea:focus {
+	outline: none !important;
+	border: 2px solid rgb(0, 162, 255);
+    box-shadow: 0 0 3px #719ECE;
 }
 
 /* Preview */
